--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,5 @@
 variables:
-  APP_NAME: "Expressapi"
+  APP_NAME: "Expressapi2"
   APP_CONTAINER_PORT: "80"
   APP_EXPOSED_PORT: "80"
   HEROKU_APP_STG: "ci-testapp-staging"
