--- a/nginx.conf
+++ b/nginx.conf
@@ -18,7 +18,7 @@ http {
     }
 
     server {
-        listen 80;
+        listen 0.0.0.0:$PORT;
         server_name localhost;
 
         location / {
